# longest-word

./: pyproject.toml  requirements.txt
.github/workflows/: .python-ci.yml
longest_word/: game.py
static/: style.css
templates/: home.html
tests/: test_game.py
